finish all tutorials with roberta, todo check vscode model_main

--- a/nbs/25_model_main_roberta_multilabel.ipynb
+++ b/nbs/25_model_main_roberta_multilabel.ipynb
@@ -140,37 +140,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Clothing ID                   0\n",
-       "Age                           0\n",
-       "Title                      3810\n",
-       "Review Text                 845\n",
-       "Rating                        0\n",
-       "Recommended IND               0\n",
-       "Positive Feedback Count       0\n",
-       "Division Name                14\n",
-       "Department Name              14\n",
-       "Class Name                   14\n",
-       "Fake Label                    0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.isna().sum()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -365,9 +334,10 @@
    "source": [
     "tdc = TextDataController.from_df(df,\n",
     "                                 main_text='Review Text',\n",
-    "                                 label_names=['Multi_Label'],\n",
+    "                                 label_names='Multi_Label',\n",
+    "                                 sup_types='classification',\n",
     "                                 filter_dict={'Review Text': lambda x: x is not None},\n",
-    "                                 metadatas=['Title'],\n",
+    "                                 metadatas='Title',\n",
     "                                 content_transformations=[text_normalize,str.lower],\n",
     "                                 content_augmentations= [nearby_aug_func,str.lower], \n",
     "                                 val_ratio=0.2,\n",
@@ -409,7 +379,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da06533daef24e0d858d2593b557ce07",
+       "model_id": "a95ea15a7c4842329e0efdb532587603",
        "version_major": 2,
        "version_minor": 0
       },
@@ -423,7 +393,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f07637d91254141a0d5b0bc8a99c1fe",
+       "model_id": "b086c64c8d034b2281743bf621964e5f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -437,7 +407,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "acb28aaf828e4cd1af80787ef3f4c492",
+       "model_id": "10a8d056cd8d4cca8f98b0bd7ca5c6f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -451,7 +421,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "207930bb40c74bb5a56a314a50cc20da",
+       "model_id": "78e78c9a801142cd830829813ca6699a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -465,7 +435,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c03c732a2e7348a1a13fa3c158a463b2",
+       "model_id": "698c2337967f4ebebd350b9aba405b33",
        "version_major": 2,
        "version_minor": 0
       },
@@ -479,7 +449,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2292db91fa245cd8c9e60cae956f378",
+       "model_id": "9f52d316ee094e7b82cf239580d4df17",
        "version_major": 2,
        "version_minor": 0
       },
@@ -493,7 +463,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1abd2fe8be1a4d9fb74b5dd54d8aa87e",
+       "model_id": "48fb8add2c0f4f888e4847f274f87f6f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -507,7 +477,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ea77188e9864ff8bb6e5dd3d8ae7ffa",
+       "model_id": "c14691d8088e40998669b6f086446de7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -521,7 +491,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73382eed492f44848ba0ce7c5c70a73b",
+       "model_id": "dd72fd2e190b4e91bd9486ea3f2b5df0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -535,7 +505,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ba69f871caf46c49d20d46427776bcf",
+       "model_id": "66cc6c55960c4a8fa33a9115f80923cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -549,7 +519,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "601c06a672b342338b6c06d8eb9beae6",
+       "model_id": "a2d2b847bb004351856eec658aae1885",
        "version_major": 2,
        "version_minor": 0
       },
@@ -750,8 +720,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# you can adjust the `compute_metrics_classification` to perform multi-label with a threshold\n",
-    "_cmc = partial(compute_metrics_classification,\n",
+    "# you can adjust the `compute_metrics` to perform multi-label with a threshold\n",
+    "_cmc = partial(compute_metrics,\n",
     "               is_multilabel=tdc.is_multilabel,\n",
     "               multilabel_threshold=0.55)"
    ]
@@ -776,7 +746,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='849' max='849' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [849/849 02:08, Epoch 3/3]\n",
+       "      [849/849 02:09, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -792,23 +762,23 @@
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>No log</td>\n",
-       "      <td>0.239357</td>\n",
-       "      <td>0.581212</td>\n",
-       "      <td>0.539328</td>\n",
+       "      <td>0.238540</td>\n",
+       "      <td>0.589649</td>\n",
+       "      <td>0.538003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.268000</td>\n",
-       "      <td>0.234935</td>\n",
-       "      <td>0.586527</td>\n",
-       "      <td>0.414494</td>\n",
+       "      <td>0.267500</td>\n",
+       "      <td>0.234749</td>\n",
+       "      <td>0.582221</td>\n",
+       "      <td>0.409854</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.268000</td>\n",
-       "      <td>0.231022</td>\n",
-       "      <td>0.604293</td>\n",
-       "      <td>0.539328</td>\n",
+       "      <td>0.267500</td>\n",
+       "      <td>0.231377</td>\n",
+       "      <td>0.607004</td>\n",
+       "      <td>0.539770</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -931,7 +901,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ae085fa3c93449a8bc6befcfefb5d69",
+       "model_id": "09b0ed23bd744dbf8a782453194fbc41",
        "version_major": 2,
        "version_minor": 0
       },
@@ -945,12 +915,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af58d5da2ebe460ca52aeaf1bb95ef28",
+       "model_id": "d838b410f64d4559b6e4e1d60799682d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map (num_proc=4):   0%|          | 0/4526 [00:00<?, ? examples/s]"
+       "Map:   0%|          | 0/4526 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -958,7 +928,7 @@
     }
    ],
    "source": [
-    "df_val = controller.predict_ddict_classification(ds_type='validation')"
+    "df_val = controller.predict_ddict(ds_type='validation')"
    ]
   },
   {
@@ -1007,7 +977,7 @@
        "      <td>[0, 4, 215, 10, 1531, 8443, 27785, 372, 7, 356...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, Jackets]</td>\n",
-       "      <td>[0.0013850149, 0.001661484, 0.57542616, 0.3931...</td>\n",
+       "      <td>[0.00069115276, 0.0022493086, 0.5330181, 0.434...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1018,7 +988,7 @@
        "      <td>[0, 41918, 8, 14878, 479, 939, 802, 42, 6399, ...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, Tops]</td>\n",
-       "      <td>[0.00047094648, 0.0010086668, 0.582984, 0.3197...</td>\n",
+       "      <td>[0.00073990214, 0.00080369296, 0.65185416, 0.3...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1029,7 +999,7 @@
        "      <td>[0, 4903, 1001, 8, 1256, 479, 42, 299, 34, 10,...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, Tops]</td>\n",
-       "      <td>[0.00090871606, 0.0006773998, 0.66374516, 0.34...</td>\n",
+       "      <td>[0.00086227985, 0.0006468746, 0.65096205, 0.34...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1040,7 +1010,7 @@
        "      <td>[0, 18581, 2089, 1589, 1136, 3568, 479, 939, 7...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[Dresses, General]</td>\n",
-       "      <td>[0.0009848905, 0.98198295, 0.5890762, 0.407513...</td>\n",
+       "      <td>[0.00070982194, 0.98071104, 0.58263797, 0.4159...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1051,7 +1021,7 @@
        "      <td>[0, 20473, 4682, 9215, 479, 42, 16, 127, 92, 2...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[Dresses, General]</td>\n",
-       "      <td>[0.0010567493, 0.98311687, 0.5909153, 0.426306...</td>\n",
+       "      <td>[0.00093026995, 0.98277146, 0.5841095, 0.41065...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1087,11 +1057,11 @@
        "4  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...  [Dresses, General]   \n",
        "\n",
        "                               pred_prob_Multi_Label  \n",
-       "0  [0.0013850149, 0.001661484, 0.57542616, 0.3931...  \n",
-       "1  [0.00047094648, 0.0010086668, 0.582984, 0.3197...  \n",
-       "2  [0.00090871606, 0.0006773998, 0.66374516, 0.34...  \n",
-       "3  [0.0009848905, 0.98198295, 0.5890762, 0.407513...  \n",
-       "4  [0.0010567493, 0.98311687, 0.5909153, 0.426306...  "
+       "0  [0.00069115276, 0.0022493086, 0.5330181, 0.434...  \n",
+       "1  [0.00073990214, 0.00080369296, 0.65185416, 0.3...  \n",
+       "2  [0.00086227985, 0.0006468746, 0.65096205, 0.34...  \n",
+       "3  [0.00070982194, 0.98071104, 0.58263797, 0.4159...  \n",
+       "4  [0.00093026995, 0.98277146, 0.5841095, 0.41065...  "
       ]
      },
      "execution_count": null,
@@ -1147,7 +1117,7 @@
     {
      "data": {
       "text/plain": [
-       "0       [0, 0, 1, 0, 0, 0, 1, 0, 0]\n",
+       "0       [0, 0, 0, 0, 0, 0, 1, 0, 0]\n",
        "1       [0, 0, 1, 0, 0, 0, 0, 1, 0]\n",
        "2       [0, 0, 1, 0, 0, 0, 0, 1, 0]\n",
        "3       [0, 1, 1, 0, 0, 0, 0, 0, 0]\n",
@@ -1178,7 +1148,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6043420401926423"
+       "0.6073332283258327"
       ]
      },
      "execution_count": null,
@@ -1228,7 +1198,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aafecf316b5e4b5d9733c32c4fd02ab9",
+       "model_id": "3d0688cb2c094c729f1a4daefe9ca6f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1242,7 +1212,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e26263bc231b4baaac19b712f57c1e10",
+       "model_id": "da2f3ddaba95431f970a1e8a1b92ae09",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1256,7 +1226,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "498f244b9433424fbe170c45eda3e0fc",
+       "model_id": "b1b261de018344078b7470601ba282c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1270,7 +1240,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "191ced1dc8c145d3b0712fe651af4d46",
+       "model_id": "ff6520f5f331449dbf283cf14ee2f9b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1284,7 +1254,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e0cd54f0b3c4d2991b7573f9d598094",
+       "model_id": "ba48cb1d04d44a5b919c783dcde356a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1305,7 +1275,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4010c54379241c285b902aed89d32f7",
+       "model_id": "f1db4c92b5754d849ab601143ddfdd05",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1319,12 +1289,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8dd47f26739c4de19d4af88b77410904",
+       "model_id": "627cdf6d72874619a6b6a263c56a0ef2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map (num_proc=4):   0%|          | 0/4528 [00:00<?, ? examples/s]"
+       "Map:   0%|          | 0/4528 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -1390,7 +1360,7 @@
        "      <td>[0, 20473, 13, 173, 8, 310, 479, 42, 6399, 136...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, Tops]</td>\n",
-       "      <td>[0.00080012705, 0.0010102104, 0.6529304, 0.339...</td>\n",
+       "      <td>[0.0007847408, 0.00071138283, 0.65471923, 0.34...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1399,7 +1369,7 @@
        "      <td>[0, 4, 939, 218, 75, 216, 596, 939, 56, 5, 548...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[Bottoms, General]</td>\n",
-       "      <td>[0.9908535, 0.0026164302, 0.71414965, 0.284845...</td>\n",
+       "      <td>[0.99152774, 0.0020713876, 0.74409497, 0.27505...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1408,7 +1378,7 @@
        "      <td>[0, 12338, 9304, 479, 5, 29, 364, 37687, 32, 3...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[Bottoms, General]</td>\n",
-       "      <td>[0.9883631, 0.0016809049, 0.7240193, 0.3070410...</td>\n",
+       "      <td>[0.98930293, 0.00086282805, 0.72397375, 0.2994...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1417,7 +1387,7 @@
        "      <td>[0, 33258, 3137, 24382, 13, 10, 6148, 159, 479...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, Tops]</td>\n",
-       "      <td>[0.0004723154, 0.0027404116, 0.6265554, 0.3163...</td>\n",
+       "      <td>[0.0006425811, 0.0008284027, 0.6523966, 0.3462...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1426,7 +1396,7 @@
        "      <td>[0, 20263, 8, 650, 479, 5, 6399, 16, 2260, 10,...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
        "      <td>[General, Tops]</td>\n",
-       "      <td>[0.0006180719, 0.0011375427, 0.60152483, 0.309...</td>\n",
+       "      <td>[0.00038892202, 0.0005628376, 0.65556854, 0.32...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1462,11 +1432,11 @@
        "4  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...     [General, Tops]   \n",
        "\n",
        "                               pred_prob_Multi_Label  \n",
-       "0  [0.00080012705, 0.0010102104, 0.6529304, 0.339...  \n",
-       "1  [0.9908535, 0.0026164302, 0.71414965, 0.284845...  \n",
-       "2  [0.9883631, 0.0016809049, 0.7240193, 0.3070410...  \n",
-       "3  [0.0004723154, 0.0027404116, 0.6265554, 0.3163...  \n",
-       "4  [0.0006180719, 0.0011375427, 0.60152483, 0.309...  "
+       "0  [0.0007847408, 0.00071138283, 0.65471923, 0.34...  \n",
+       "1  [0.99152774, 0.0020713876, 0.74409497, 0.27505...  \n",
+       "2  [0.98930293, 0.00086282805, 0.72397375, 0.2994...  \n",
+       "3  [0.0006425811, 0.0008284027, 0.6523966, 0.3462...  \n",
+       "4  [0.00038892202, 0.0005628376, 0.65556854, 0.32...  "
       ]
      },
      "execution_count": null,
@@ -1513,7 +1483,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d1f610d52124e70b2d1e3c86dbc3ba0",
+       "model_id": "a3bd98ecb1004875925a2a20cb23732e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1527,7 +1497,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "057a6747dade455396a17afd7d260ebd",
+       "model_id": "1b48ef2274f640d8b80be7c85218782d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1541,7 +1511,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "074c9040ff624e418bec54411f5c9546",
+       "model_id": "93597a09bfd447e19ca3363f5598418a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1555,7 +1525,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4244cf07ddb240868f91bd0947c48225",
+       "model_id": "5ab4c9147b4c49ff99ba4cf5bf1a39cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1576,7 +1546,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20378e7f584944d98711d49365a3fc99",
+       "model_id": "85871d0960bc41c3bea8b1292d0f90e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1588,16 +1558,9 @@
      "output_type": "display_data"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "num_proc must be <= 1. Reducing num_proc to 1 for dataset of size 1.\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd837847249e4965a015afae1ce5d4d0",
+       "model_id": "7b4a663736d14d73a53e9b97503cc2a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1655,7 +1618,7 @@
        "      <td>[0, 12338, 6399, 479, 42, 6399, 16, 98, 3473, ...</td>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]</td>\n",
        "      <td>[General, Tops]</td>\n",
-       "      <td>[0.00087802607, 0.0006508869, 0.65172744, 0.34...</td>\n",
+       "      <td>[0.00086415233, 0.0007044587, 0.6526612, 0.344...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1672,7 +1635,7 @@
        "0  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]  [General, Tops]  \\\n",
        "\n",
        "                               pred_prob_Multi_Label  \n",
-       "0  [0.00087802607, 0.0006508869, 0.65172744, 0.34...  "
+       "0  [0.00086415233, 0.0007044587, 0.6526612, 0.344...  "
       ]
      },
      "execution_count": null,
