--- a/nbs/09_models.gpt2.classifiers.ipynb
+++ b/nbs/09_models.gpt2.classifiers.ipynb
@@ -161,7 +161,7 @@
     "                )\n",
     "            else:\n",
     "                sequence_lengths = -1\n",
-    "                logger.warning(\n",
+    "                print(\n",
     "                    f\"{self.__class__.__name__} will not detect padding tokens in `inputs_embeds`. Results may be \"\n",
     "                    \"unexpected if using padding tokens in conjunction with `inputs_embeds.`\"\n",
     "                )\n",
@@ -207,7 +207,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/gpt2/classifiers.py#L17){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/gpt2/classifiers.py#L16){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### GPT2BaseForSequenceClassification\n",
        "\n",
@@ -232,7 +232,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/gpt2/classifiers.py#L17){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/gpt2/classifiers.py#L16){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### GPT2BaseForSequenceClassification\n",
        "\n",
@@ -367,7 +367,7 @@
     "                                )\n",
     "            else:\n",
     "                sequence_lengths = -1\n",
-    "                logger.warning(\n",
+    "                print(\n",
     "                    f\"{self.__class__.__name__} will not detect padding tokens in `inputs_embeds`. Results may be \"\n",
     "                    \"unexpected if using padding tokens in conjunction with `inputs_embeds.`\"\n",
     "                )\n",
@@ -413,7 +413,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/gpt2/classifiers.py#L152){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/gpt2/classifiers.py#L147){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### GPT2HiddenStateConcatForSequenceClassification\n",
        "\n",
@@ -442,7 +442,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/gpt2/classifiers.py#L152){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/gpt2/classifiers.py#L147){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### GPT2HiddenStateConcatForSequenceClassification\n",
        "\n",
