--- a/nbs/00_text_main.ipynb
+++ b/nbs/00_text_main.ipynb
@@ -38,6 +38,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "from __future__ import annotations\n",
     "from sklearn.preprocessing import LabelEncoder,MultiLabelBinarizer\n",
     "from datasets import DatasetDict,Dataset,IterableDataset,load_dataset,concatenate_datasets,Value\n",
     "from pathlib import Path\n",
