--- a/nbs/22_gpt2_multihead_regression.ipynb
+++ b/nbs/22_gpt2_multihead_regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Controller Tutorial: GPT2 model (Regression)\n",
+    "# GPT2 model (Regression)\n",
     "\n",
     "> This notebook contains some example of how to use the GPT2-based models in this NLP library\n",
     "\n",
