--- a/nbs/22_roberta_multihead_regression.ipynb
+++ b/nbs/22_roberta_multihead_regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Controller Tutorial: Roberta model (Regression)\n",
+    "# Roberta model (Regression)\n",
     "\n",
     "> This notebook contains some example of how to use the Roberta-based models in this NLP library\n",
     "\n",
