--- a/nbs/20_gpt2_singlehead.ipynb
+++ b/nbs/20_gpt2_singlehead.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Controller Tutorial: GPT2 model (Custom Single Head)\n",
+    "# GPT2 model (Custom Single Head)\n",
     "\n",
     "> This notebook contains some example of how to use the GPT2-based models in this NLP library\n",
     "\n",
