--- a/nbs/00_text_main.ipynb
+++ b/nbs/00_text_main.ipynb
@@ -705,17 +705,34 @@
     "                      tok,\n",
     "                      max_length=None,\n",
     "                      is_split_into_words=False,\n",
-    "                      return_tensors=None\n",
+    "                      return_tensors=None,\n",
+    "                      return_special_tokens_mask=False\n",
     "                     ):\n",
     "    if max_length is None:\n",
     "        # pad to model's default max sequence length\n",
-    "        return tok(text, padding=\"max_length\", truncation=True,is_split_into_words=is_split_into_words,return_tensors=return_tensors)\n",
+    "        return tok(text, padding=\"max_length\", \n",
+    "                   truncation=True,\n",
+    "                   is_split_into_words=is_split_into_words,\n",
+    "                   return_tensors=return_tensors,\n",
+    "                   return_special_tokens_mask=return_special_tokens_mask\n",
+    "                  )\n",
     "    if isinstance(max_length,int) and max_length>0:\n",
     "        # pad to the largest length of the current batch, and start truncating at max_length\n",
-    "        return tok(text, padding=True, max_length=max_length,truncation=True,is_split_into_words=is_split_into_words,return_tensors=return_tensors)\n",
+    "        return tok(text, padding=True, \n",
+    "                   max_length=max_length,\n",
+    "                   truncation=True,\n",
+    "                   is_split_into_words=is_split_into_words,\n",
+    "                   return_tensors=return_tensors,\n",
+    "                   return_special_tokens_mask=return_special_tokens_mask\n",
+    "                  )\n",
     "    \n",
     "    # no padding (still truncate at model's default max sequence length)\n",
-    "    return tok(text, truncation=True,is_split_into_words=is_split_into_words,return_tensors=return_tensors)"
+    "    return tok(text, padding=False,\n",
+    "               truncation=True,\n",
+    "               is_split_into_words=is_split_into_words,\n",
+    "               return_tensors=return_tensors,\n",
+    "               return_special_tokens_mask=return_special_tokens_mask\n",
+    "              )"
    ]
   },
   {
@@ -1522,7 +1539,7 @@
     "        \n",
     "    def do_tokenization(self,\n",
     "                        tokenizer, # Tokenizer (preferably from HuggingFace)\n",
-    "                        max_length=None, # pad to model's allowed max length (default is max_sequence_length)\n",
+    "                        max_length=None, # pad to model's allowed max length (default is max_sequence_length). Use -1 for no padding at all\n",
     "                        trn_size=None, # The number of training data to be tokenized\n",
     "                       ):\n",
     "        print_msg('Tokenization',20,verbose=self.verbose)\n",
@@ -10632,7 +10649,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/quan/anaconda3/envs/fastai_v2/lib/python3.10/site-packages/nbdev/export.py:54: UserWarning: Notebook '/home/quan/kwon/that-nlp-library/nbs/00_text_main_lm.ipynb' uses `#|export` without `#|default_exp` cell.\n",
+      "Note nbdev2 no longer supports nbdev1 syntax. Run `nbdev_migrate` to upgrade.\n",
+      "See https://nbdev.fast.ai/getting_started.html for more information.\n",
+      "  warn(f\"Notebook '{nbname}' uses `#|export` without `#|default_exp` cell.\\n\"\n"
+     ]
+    }
+   ],
    "source": [
     "#| hide\n",
     "import nbdev; nbdev.nbdev_export()"
