streaming LM. Bug with generator

--- a/nbs/00_text_main.ipynb
+++ b/nbs/00_text_main.ipynb
@@ -1451,8 +1451,8 @@
     "    def _do_augmentation(self):\n",
     "        if len(self.aug_tfms):\n",
     "            print_msg('Text Augmentation',20,verbose=self.verbose)\n",
-    "\n",
-    "            seed_everything(self.seed)   \n",
+    "            if self.seed:\n",
+    "                seed_everything(self.seed)   \n",
     "            for tfm in self.aug_tfms:\n",
     "                print_msg(callable_name(tfm),verbose=self.verbose)\n",
     "                bs = self.batch_size\n",
@@ -10649,18 +10649,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/quan/anaconda3/envs/fastai_v2/lib/python3.10/site-packages/nbdev/export.py:54: UserWarning: Notebook '/home/quan/kwon/that-nlp-library/nbs/00_text_main_lm.ipynb' uses `#|export` without `#|default_exp` cell.\n",
-      "Note nbdev2 no longer supports nbdev1 syntax. Run `nbdev_migrate` to upgrade.\n",
-      "See https://nbdev.fast.ai/getting_started.html for more information.\n",
-      "  warn(f\"Notebook '{nbname}' uses `#|export` without `#|default_exp` cell.\\n\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| hide\n",
     "import nbdev; nbdev.nbdev_export()"
