bug fixed. Testing streaming vs nonstreaming version

--- a/nbs/03_model_main.ipynb
+++ b/nbs/03_model_main.ipynb
@@ -1091,7 +1091,7 @@
     "                                     topk=topk,\n",
     "                                     are_heads_separated=are_heads_separated\n",
     "                                    )\n",
-    "        return results.to_pandas()\n",
+    "        return results.to_dict()\n",
     "    \n",
     "    def predict_raw_dset(self,\n",
     "                         dset, # A raw HuggingFace dataset\n",
