done passing lm streaming data

--- a/nbs/00_text_main.ipynb
+++ b/nbs/00_text_main.ipynb
@@ -45,7 +45,7 @@
     "from that_nlp_library.utils import *\n",
     "from functools import partial\n",
     "import warnings\n",
-    "from datasets.utils.logging import disable_progress_bar"
+    "from datasets.utils.logging import disable_progress_bar,enable_progress_bar"
    ]
   },
   {
@@ -1106,7 +1106,8 @@
     "        self.verboseprint = print if verbose else lambda *a, **k: None\n",
     "        if not self.verbose:\n",
     "            disable_progress_bar() # turn off huggingface `map` progress bar\n",
-    "        \n",
+    "        else:\n",
+    "            enable_progress_bar()\n",
     "        if hasattr(inp,'keys'): # is datasetdict\n",
     "            if 'train' in inp.keys(): \n",
     "                self.ddict_rest = inp\n",
