--- a/nbs/00_text_main_streaming.ipynb
+++ b/nbs/00_text_main_streaming.ipynb
@@ -47,7 +47,7 @@
     "from functools import partial\n",
     "from collections import defaultdict\n",
     "import warnings\n",
-    "from datasets.utils.logging import disable_progress_bar"
+    "from datasets.utils.logging import disable_progress_bar, enable_progress_bar"
    ]
   },
   {
@@ -125,6 +125,8 @@
     "        self.verboseprint = print if verbose else lambda *a, **k: None\n",
     "        if not self.verbose:\n",
     "            disable_progress_bar() # turn off huggingface `map` progress bar\n",
+    "        else:\n",
+    "            enable_progress_bar()\n",
     "            \n",
     "        if hasattr(inp,'keys'): # is datasetdict\n",
     "            if 'train' not in inp.keys(): \n",
@@ -408,7 +410,6 @@
     "    def _do_transformation_augmentation_tokenization_generator(self):\n",
     "        tok_func = partial(tokenize_function,tok=self.tokenizer,max_length=self.max_length)\n",
     "        all_tfms = self.content_tfms + self.aug_tfms\n",
-    "        one_tfm = partial(func_all,functions=all_tfms) if len(all_tfms) else lambda x: x\n",
     "        if self.seed:\n",
     "            seed_everything(self.seed)\n",
     "        \n",
