finish draft for language model controller

--- a/nbs/03_model_main.ipynb
+++ b/nbs/03_model_main.ipynb
@@ -88,11 +88,12 @@
     "    else:\n",
     "        config.output_hidden_states=output_hidden_states\n",
     "    \n",
-    "    \n",
-    "    seed_everything(seed)\n",
+    "    if seed:\n",
+    "        seed_everything(seed)\n",
+    "        \n",
     "    if body_model is not None:\n",
     "        model = model_class(config=config,**model_kwargs)\n",
-    "        layers = list(model.children())\n",
+    "#         layers = list(model.children())\n",
     "        print('Loading body weights. This assumes the body is the very first block of your custom architecture')\n",
     "        body_name, _ = next(iter(model.named_children()))\n",
     "        setattr(model, body_name, body_model)\n",
@@ -100,6 +101,10 @@
     "        \n",
     "    else:\n",
     "        model = model_class.from_pretrained(cpoint_path,config=config,**model_kwargs).to(device)\n",
+    "    \n",
+    "    print(f'Total parameters: {sum(param.numel() for param in model.parameters())}')\n",
+    "    print(f'Total trainable parameters: {sum(param.numel() for param in model.parameters() if p.requires_grad)}')\n",
+    "    \n",
     "    return model"
    ]
   },
@@ -628,8 +633,10 @@
     "    \"The main model training/finetuning function\"\n",
     "    torch.cuda.empty_cache()\n",
     "    gc.collect()\n",
-    "\n",
-    "    seed_everything(seed)\n",
+    "    \n",
+    "    if seed:\n",
+    "        seed_everything(seed)\n",
+    "        \n",
     "    training_args = TrainingArguments(o_dir, \n",
     "                                learning_rate=lr, \n",
     "                                warmup_ratio=warmup_ratio,\n",
@@ -659,9 +666,8 @@
     "        eval_dataset=ddict['validation'] if not no_valid else None,\n",
     "        data_collator=data_collator,\n",
     "        tokenizer=tokenizer,\n",
-    "        compute_metrics=compute_metrics,\n",
+    "        compute_metrics=compute_metrics if not no_valid else None\n",
     "    )\n",
-    "    \n",
     "    \n",
     "    trainer.train()\n",
     "    return trainer"
