--- a/nbs/07_utils.ipynb
+++ b/nbs/07_utils.ipynb
@@ -350,6 +350,20 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "def resize_model_embeddings(model,tokenizer):\n",
+    "    embedding_size = model.get_input_embeddings().weight.shape[0]\n",
+    "    if len(tokenizer) > embedding_size:\n",
+    "        model.resize_token_embeddings(len(tokenizer))\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "def sigmoid(x):\n",
     "    \"\"\"\n",
     "    A numerically stable version of the logistic sigmoid function.\n",
@@ -375,7 +389,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/quan/anaconda3/envs/fastai_v2/lib/python3.10/site-packages/nbdev/export.py:54: UserWarning: Notebook '/home/quan/kwon/that-nlp-library/nbs/00_text_main_lm_streaming.ipynb' uses `#|export` without `#|default_exp` cell.\n",
+      "/home/quan/anaconda3/envs/fastai_v2/lib/python3.10/site-packages/nbdev/export.py:54: UserWarning: Notebook '/home/quan/kwon/that-nlp-library/nbs/03_model_lm_main.ipynb' uses `#|export` without `#|default_exp` cell.\n",
       "Note nbdev2 no longer supports nbdev1 syntax. Run `nbdev_migrate` to upgrade.\n",
       "See https://nbdev.fast.ai/getting_started.html for more information.\n",
       "  warn(f\"Notebook '{nbname}' uses `#|export` without `#|default_exp` cell.\\n\"\n"
