add both tutorials for lm. TODO do prepare_raw_text for lm

--- a/nbs/00_text_main_lm.ipynb
+++ b/nbs/00_text_main_lm.ipynb
@@ -272,7 +272,8 @@
     "                         ):\n",
     "        if not hasattr(self,'max_length'):\n",
     "            raise ValueError(\"Please call `process_and_tokenize' or `do_tokenization` to tokenize your dataset\")\n",
-    "            \n",
+    "        \n",
+    "        self.is_mlm = is_mlm\n",
     "        pad_to_multiple_of_8 = (self.max_length<0) # get data collator to pad\n",
     "        self.data_collator = DataCollatorForLanguageModeling(tokenizer=self.tokenizer,\n",
     "                                                             mlm=is_mlm,\n",
