--- a/nbs/03_model_lm_main.ipynb
+++ b/nbs/03_model_lm_main.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Language Model Main Functions and Controller \n",
     "\n",
-    "> For an in-depth tutorial, click [here]()\n",
+    "> For an in-depth tutorial, click [here for Roberta language model](https://anhquan0412.github.io/that-nlp-library/model_lm_roberta_tutorial.html), and [here for GPT language model](https://anhquan0412.github.io/that-nlp-library/model_lm_gpt2_tutorial.html)\n",
     "\n",
     "- skip_showdoc: true\n",
     "- skip_exec: true"
@@ -48,16 +48,24 @@
     "#| export\n",
     "from __future__ import annotations\n",
     "import os, sys\n",
-    "from transformers import Trainer, TrainingArguments, AutoConfig, AutoModelForCausalLM, AutoModelForMaskedLM\n",
+    "from transformers import Trainer, TrainingArguments, AutoConfig\n",
     "from datasets import DatasetDict,Dataset\n",
     "import torch\n",
     "import gc\n",
     "import math\n",
     "from functools import partial\n",
+    "import evaluate\n",
     "import numpy as np\n",
-    "from that_nlp_library.utils import *\n",
-    "from that_nlp_library.text_main_lm import TextDataLMController\n",
-    "from that_nlp_library.text_main_lm_streaming import TextDataLMControllerStreaming"
+    "from that_nlp_library.utils import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoModelForCausalLM, AutoModelForMaskedLM"
    ]
   },
   {
@@ -105,6 +113,8 @@
       "text/markdown": [
        "---\n",
        "\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L20){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
        "### language_model_init\n",
        "\n",
        ">      language_model_init (model_class, cpoint_path=None, config=None,\n",
@@ -122,6 +132,8 @@
       ],
       "text/plain": [
        "---\n",
+       "\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L20){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### language_model_init\n",
        "\n",
@@ -437,9 +449,7 @@
     "    \n",
     "    if seed:\n",
     "        seed_everything(seed)\n",
-    "    if compute_metrics is None:\n",
-    "        compute_metrics=compute_lm_accuracy\n",
-    "    \n",
+    "        \n",
     "    training_args = TrainingArguments(o_dir, \n",
     "                                     learning_rate=lr, \n",
     "                                     warmup_ratio=warmup_ratio,\n",
@@ -487,6 +497,8 @@
       "text/markdown": [
        "---\n",
        "\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L81){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
        "### finetune_lm\n",
        "\n",
        ">      finetune_lm (lr, bs, wd, epochs, ddict, tokenizer, o_dir='./tmp_weights',\n",
@@ -522,6 +534,8 @@
       ],
       "text/plain": [
        "---\n",
+       "\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L81){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### finetune_lm\n",
        "\n",
@@ -598,12 +612,17 @@
     "            grad_accum_steps=2, # Gradient will be accumulated over gradient_accumulation_steps steps.\n",
     "            tokenizer=None, # Tokenizer (to override one in ```data_store```)\n",
     "            data_collator=None, # Data Collator (to override one in ```data_store```)\n",
+    "            is_mlm=None, # Whether this is masked LM or casual LM\n",
     "            trainer_class=None, # You can include the class name of your custom trainer here\n",
     "           ):\n",
     "        \n",
     "        if tokenizer is None: tokenizer=check_and_get_attribute(self.data_store,'tokenizer')\n",
-    "        if data_collator is None: data_collator=getattr(self.data_store,'data_collator',None)\n",
+    "        if data_collator is None: data_collator=check_and_get_attribute(self.data_store,'data_collator')\n",
     "        if ddict is None: ddict = check_and_get_attribute(self.data_store,'main_ddict')\n",
+    "        if is_mlm is None: is_mlm = check_and_get_attribute(self.data_store,'is_mlm')\n",
+    "            \n",
+    "        if compute_metrics is None:\n",
+    "            compute_metrics=partial(compute_lm_accuracy,is_mlm=is_mlm)\n",
     "        \n",
     "        if len(set(ddict.keys()) & set(['train','training']))==0:\n",
     "            raise ValueError(\"Missing the following key for DatasetDict: train/training\")\n",
@@ -652,6 +671,8 @@
       "text/markdown": [
        "---\n",
        "\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L145){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
        "### ModelLMController\n",
        "\n",
        ">      ModelLMController (model, data_store=None, seed=None)\n",
@@ -666,6 +687,8 @@
       ],
       "text/plain": [
        "---\n",
+       "\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L145){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### ModelLMController\n",
        "\n",
@@ -699,6 +722,8 @@
       "text/markdown": [
        "---\n",
        "\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L155){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
        "### ModelLMController.fit\n",
        "\n",
        ">      ModelLMController.fit (epochs, learning_rate, ddict=None,\n",
@@ -707,7 +732,8 @@
        ">                             warmup_ratio=0.1, o_dir='./tmp_weights',\n",
        ">                             save_checkpoint=False, hf_report_to='none',\n",
        ">                             grad_accum_steps=2, tokenizer=None,\n",
-       ">                             data_collator=None, trainer_class=None)\n",
+       ">                             data_collator=None, is_mlm=None,\n",
+       ">                             trainer_class=None)\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
@@ -725,11 +751,14 @@
        "| grad_accum_steps | int | 2 | Gradient will be accumulated over gradient_accumulation_steps steps. |\n",
        "| tokenizer | NoneType | None | Tokenizer (to override one in ```data_store```) |\n",
        "| data_collator | NoneType | None | Data Collator (to override one in ```data_store```) |\n",
+       "| is_mlm | NoneType | None | Whether this is masked LM or casual LM |\n",
        "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |"
       ],
       "text/plain": [
        "---\n",
        "\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/model_lm_main.py#L155){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
        "### ModelLMController.fit\n",
        "\n",
        ">      ModelLMController.fit (epochs, learning_rate, ddict=None,\n",
@@ -738,7 +767,8 @@
        ">                             warmup_ratio=0.1, o_dir='./tmp_weights',\n",
        ">                             save_checkpoint=False, hf_report_to='none',\n",
        ">                             grad_accum_steps=2, tokenizer=None,\n",
-       ">                             data_collator=None, trainer_class=None)\n",
+       ">                             data_collator=None, is_mlm=None,\n",
+       ">                             trainer_class=None)\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
@@ -756,6 +786,7 @@
        "| grad_accum_steps | int | 2 | Gradient will be accumulated over gradient_accumulation_steps steps. |\n",
        "| tokenizer | NoneType | None | Tokenizer (to override one in ```data_store```) |\n",
        "| data_collator | NoneType | None | Data Collator (to override one in ```data_store```) |\n",
+       "| is_mlm | NoneType | None | Whether this is masked LM or casual LM |\n",
        "| trainer_class | NoneType | None | You can include the class name of your custom trainer here |"
       ]
      },
